policy-examples/cis_policies_split/docker-5.12-readonly-rootfs.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: 5-12-ensure-the-container-s-root-filesystem-is-mounted-as-read
  labels:
    app.kubernetes.io/name: cis-policy
    app.kubernetes.io/part-of: security-policies
spec:
  policyName: CIS-Docker-5.12 - Ensure the container's root filesystem is mounted as read
    only
  description: 'CIS Docker Benchmark 5.12: Ensure the container''s root filesystem is
    mounted as read only'
  rationale: Read-only root filesystems prevent malicious modifications to the container
  remediation: Mount container root filesystems as read-only and use volumes for writable
    data
  disabled: false
  categories:
  - Security Best Practices
  lifecycleStages:
  - DEPLOY
  eventSource: NOT_APPLICABLE
  exclusions: []
  scope: []
  severity: MEDIUM_SEVERITY
  enforcementActions:
  - FAIL_DEPLOYMENT_CREATE_ENFORCEMENT
  notifiers: []
  SORTName: ''
  SORTLifecycleStage: ''
  SORTEnforcement: false
  policyVersion: '1.1'
  policySections:
  - sectionName: Container Configuration
    policyGroups:
    - fieldName: Read-Only Root Filesystem
      booleanOperator: OR
      negate: false
      values:
      - value: 'false'
  mitreAttackVectors:
  - tactic: TA0005
    techniques:
    - T1222
  criteriaLocked: false
  mitreVectorsLocked: false
  isDefault: false
