policy-examples/cis_policies_split/k8s-5.1.1-no-privileged-containers.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: 5-1-1-minimize-privileged-containers
  labels:
    app.kubernetes.io/name: cis-policy
    app.kubernetes.io/part-of: security-policies
spec:
  policyName: CIS-K8s-5.1.1 - Minimize Privileged Containers
  description: 'CIS Kubernetes Benchmark 5.1.1: Ensure that a Pod Security Policy forbids
    privileged containers'
  rationale: Privileged containers have access to all Linux kernel capabilities and
    devices
  remediation: 'Create a Pod Security Policy that sets privileged: false'
  disabled: false
  categories:
  - Security Best Practices
  lifecycleStages:
  - DEPLOY
  eventSource: NOT_APPLICABLE
  exclusions: []
  scope: []
  severity: HIGH_SEVERITY
  enforcementActions:
  - FAIL_DEPLOYMENT_CREATE_ENFORCEMENT
  notifiers: []
  SORTName: ''
  SORTLifecycleStage: ''
  SORTEnforcement: true
  policyVersion: '1.1'
  policySections:
  - sectionName: Container Configuration
    policyGroups:
    - fieldName: Privileged Container
      booleanOperator: OR
      negate: false
      values:
      - value: 'true'
  mitreAttackVectors:
  - tactic: TA0004
    techniques:
    - T1611
  criteriaLocked: false
  mitreVectorsLocked: false
  isDefault: false
