policy-examples/cis_policies_split/k8s-5.1.2-no-host-network.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: 5-1-2-minimize-hostnetwork-usage
  labels:
    app.kubernetes.io/name: cis-policy
    app.kubernetes.io/part-of: security-policies
spec:
  policyName: CIS-K8s-5.1.2 - Minimize hostNetwork Usage
  description: 'CIS Kubernetes Benchmark 5.1.2: Ensure that Pod Security Policy forbids
    usage of hostNetwork'
  rationale: hostNetwork controls whether the pod may use the node network namespace
  remediation: 'Create a Pod Security Policy that sets hostNetwork: false'
  disabled: false
  categories:
  - Security Best Practices
  lifecycleStages:
  - DEPLOY
  eventSource: NOT_APPLICABLE
  exclusions: []
  scope: []
  severity: HIGH_SEVERITY
  enforcementActions:
  - SCALE_TO_ZERO_ENFORCEMENT
  SORTName: ''
  SORTLifecycleStage: ''
  SORTEnforcement: true
  policyVersion: '1.1'
  policySections:
  - sectionName: Container Configuration
    policyGroups:
    - fieldName: Host Network
      booleanOperator: OR
      negate: false
      values:
      - value: 'true'
  mitreAttackVectors:
  - tactic: TA0004
    techniques:
    - T1611
  criteriaLocked: false
  mitreVectorsLocked: false
  isDefault: false
