policy-examples/cis_policies_split/k8s-5.1.4-no-privilege-escalation.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: 5-1-4-minimize-allowprivilegeescalation
  labels:
    app.kubernetes.io/name: cis-policy
    app.kubernetes.io/part-of: security-policies
spec:
  policyName: CIS-K8s-5.1.4 - Minimize allowPrivilegeEscalation
  description: 'CIS Kubernetes Benchmark 5.1.4: Ensure that Pod Security Policy forbids
    containers from allowPrivilegeEscalation'
  rationale: allowPrivilegeEscalation controls whether a process can gain more privileges
    than its parent process
  remediation: 'Create a Pod Security Policy that sets allowPrivilegeEscalation: false'
  disabled: false
  categories:
  - Security Best Practices
  lifecycleStages:
  - DEPLOY
  eventSource: NOT_APPLICABLE
  exclusions: []
  scope: []
  severity: HIGH_SEVERITY
  enforcementActions:
  - FAIL_DEPLOYMENT
  notifiers: []
  SORTName: ''
  SORTLifecycleStage: ''
  SORTEnforcement: true
  policyVersion: '1.1'
  policySections:
  - sectionName: Container Configuration
    policyGroups:
    - fieldName: Allow Privilege Escalation
      booleanOperator: OR
      negate: false
      values:
      - value: 'true'
  mitreAttackVectors:
  - tactic: TA0004
    techniques:
    - T1548
  criteriaLocked: false
  mitreVectorsLocked: false
  isDefault: false
