policy-examples/cis_policies_split/k8s-5.1.6-minimize-capabilities.yaml
apiVersion: security.stackrox.io/v1
kind: SecurityPolicy
metadata:
  name: 5-1-6-minimize-capabilities
  labels:
    app.kubernetes.io/name: cis-policy
    app.kubernetes.io/part-of: security-policies
spec:
  name: CIS-K8s-5.1.6 - Minimize capabilities
  description: 'CIS Kubernetes Benchmark 5.1.6: Ensure that Pod Security Policy forbids
    containers from acquiring dangerous capabilities'
  rationale: Linux capabilities provide a finer-grained breakdown of the privileges
    traditionally associated with the superuser
  remediation: Create a Pod Security Policy that limits the capabilities that can be
    added to containers
  disabled: false
  categories:
  - Security Best Practices
  lifecycleStages:
  - DEPLOY
  eventSource: NOT_APPLICABLE
  exclusions: []
  scope: []
  severity: HIGH_SEVERITY
  enforcementActions:
  - FAIL_DEPLOYMENT
  notifiers: []
  SORTName: ''
  SORTLifecycleStage: ''
  SORTEnforcement: true
  policyVersion: '1.1'
  policySections:
  - sectionName: Container Configuration
    policyGroups:
    - fieldName: Add Capabilities
      booleanOperator: OR
      negate: false
      values:
      - value: SYS_ADMIN
      - value: NET_ADMIN
      - value: SYS_TIME
      - value: SYS_MODULE
  mitreAttackVectors:
  - tactic: TA0004
    techniques:
    - T1548
  criteriaLocked: false
  mitreVectorsLocked: false
  isDefault: false
