policy-examples/cis_policies_split/k8s-5.3.1-cni-network-policies.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: 5-3-1-ensure-cni-in-use-supports-network-policies
  labels:
    app.kubernetes.io/name: cis-policy
    app.kubernetes.io/part-of: security-policies
spec:
  policyName: CIS-K8s-5.3.1 - Ensure CNI in use supports Network Policies
  description: 'CIS Kubernetes Benchmark 5.3.1: Ensure that the CNI in use supports
    Network Policies'
  rationale: Network policies are important for micro-segmentation in Kubernetes clusters
  remediation: Ensure network policies are defined and enforced
  disabled: false
  categories:
  - Security Best Practices
  lifecycleStages:
  - DEPLOY
  eventSource: NOT_APPLICABLE
  exclusions: []
  scope: []
  severity: MEDIUM_SEVERITY
  enforcementActions:
  - SCALE_TO_ZERO_ENFORCEMENT
  SORTName: ''
  SORTLifecycleStage: ''
  SORTEnforcement: false
  policyVersion: '1.1'
  policySections:
  - sectionName: Deployment Configuration
    policyGroups:
    - fieldName: Namespace
      booleanOperator: OR
      negate: true
      values:
      - value: kube-system
      - value: kube-public
      - value: kube-node-lease
  mitreAttackVectors:
  - tactic: TA0008
    techniques:
    - T1021
  criteriaLocked: false
  mitreVectorsLocked: false
  isDefault: false
